# OCCT-STEP-Reader

./: .gitignore  CMakeLists.txt
src/: command_line_arguments.cpp  common.hpp  convertion2nurbs.cpp  convertion2nurbss.cpp  main.cpp  occt_headers.hpp  tesselation.cpp  tostep.cpp
